Modified the tablet software Fixed major bugs and completed the workflow. The only things left to do are implement the priority selector and the icons of the annotations.

--- a/Software/Annotations/default.properties
+++ b/Software/Annotations/default.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=Samsung Electronics Co., Ltd.:GALAXY Tab Addon:8
-android.library.reference.1=../../philippe/projet-tablette5/java/vrpn-library
+android.library.reference.1=../../../philippe/projet-tablette5/java/vrpn-library
