--- a/Software/Annotations/AndroidManifest.xml
+++ b/Software/Annotations/AndroidManifest.xml
@@ -23,7 +23,9 @@
     
 	<activity android:name="eu.ensam.pacho.annotations.Navigation" 
 	    android:configChanges="orientation" 
-	    android:screenOrientation="portrait">
+	    android:screenOrientation="portrait"
+	    android:launchMode="singleTask">
+	    
     </activity>
     
 	<activity android:name="eu.ensam.pacho.annotations.AnnotationList" 
